--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -47,87 +47,70 @@
 .line-wrapper{
   grid-column: 1/2;
   grid-row: 5/6;
+  @media (max-width: 968px){
+    display: none;
+  }
 }
 
 .content{
   grid-column: 2/9;
   grid-row: 5/9;
+  @media (max-width: 968px){
+    grid-column: 1/13;
+    grid-row: 4/8;
+  }
+  h1{
+    @media (max-width: 576px){
+    font-size: 2rem;
+    }
+    @media (max-width: 400px){
+      font-size: 1.5rem;
+    }
+  }
+  p {
+    @media (max-width: 400px){
+      font-size: 0.8rem;
+    }
+  }
 }
 
 
 .bottom-buttons {
   grid-column: 1/7;
   grid-row: 11/12;
-}
-
-.bottom-buttons ul{
-  color: #fff;
-  display: flex;
-  list-style: none;
-  padding: 0;
-}
-
-@media (max-width: 968px){
-  .content{
-    grid-column: 1/13;
-    grid-row: 4/8;
-  }
-  .line-wrapper{
-    display: none;
-  }
-  .middle-buttons{
-    display: flex;
-    justify-content: center;
-  }
-  .bottom-buttons{
+  @media (max-width: 968px){
     grid-column: 3/11;
     grid-row: 11/12;
   }
-  .bottom-buttons ul{
-    color: #fff;
-    display: flex;
-    list-style: none;
-    padding: 0;
-    justify-content: center;
-  }
-}
-@media (max-width: 576px){ 
-  .content h1{
-    font-size: 2rem;
-  }
-  .bottom-buttons{
+  @media (max-width: 576px){
     grid-column: 1/13;
     grid-row: 11/12;
   }
-  .bottom-buttons ul{
-    color: #fff;
-    display: flex;
-    list-style: none;
-    padding: 0;
-    justify-content: center;
-  }
-}
-
-@media (max-width: 400px){ 
-  .content h1{
-    font-size: 1.5rem;
-  }
-  .content p {
-    font-size: 0.8rem;
-  }
-  .middle-buttons{
-      display: flex;
-      flex-wrap: wrap;
-  }
-  .bottom-buttons{
+  @media (max-width: 400px){
     grid-column: 1/13;
     grid-row: 9/12;
   }
-  .bottom-buttons ul{
+  ul{
     color: #fff;
     display: flex;
     list-style: none;
     padding: 0;
+    @media (max-width: 968px){
+      color: #fff;
+      display: flex;
+      list-style: none;
+      padding: 0;
+      justify-content: center;
+    }
+  }
+}
+
+.middle-buttons{
+  @media (max-width: 968px){
+  display: flex;
     justify-content: center;
+  }
+  @media (max-width: 400px){ 
+    flex-wrap: wrap;
   }
 }
