--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -33,6 +33,7 @@
 .header-content{
   z-index: 2;
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
