first commit for the profilepage

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,3 +46,8 @@
     background-color: #05225A;
   
   }
+  .navbarpp{
+      position: relative;
+      justify-content: left;
+      padding: 30px;
+  }
