--- a/src/components/layout/nav/search/index.scss
+++ b/src/components/layout/nav/search/index.scss
@@ -32,7 +32,7 @@
     padding-left: 0;
     padding-right: 0;
     border-radius: 0.3rem;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     > div {
       height: 100%;
@@ -140,7 +140,6 @@
   }
 }
 
-
 @media only screen and (max-width: 1100px) {
   .search-preview {
     &__card {
@@ -148,7 +147,6 @@
     }
   }
 }
-
 
 @media only screen and (max-width: 1000px) {
   .search-preview {
@@ -161,7 +159,6 @@
     font-size: 1.6vw;
   }
 }
-
 
 @media only screen and (max-width: 900px) {
   .search-preview {
