--- a/src/components/layout/nav/signup/index.scss
+++ b/src/components/layout/nav/signup/index.scss
@@ -59,10 +59,9 @@
       width: 100%;
       height: 100%;
       left: 0;
-      -webkit-box-shadow: 0px 0px 36px 3000px rgba(0,0,0,0.37);
--moz-box-shadow: 0px 0px 36px 3000px rgba(0,0,0,0.37);
-box-shadow: 0px 0px 36px 3000px rgba(0,0,0,0.37);
-
+      -webkit-box-shadow: 0px 0px 36px 3000px rgba(0, 0, 0, 0.37);
+      -moz-box-shadow: 0px 0px 36px 3000px rgba(0, 0, 0, 0.37);
+      box-shadow: 0px 0px 36px 3000px rgba(0, 0, 0, 0.37);
     }
   }
 }
