--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -1,4 +1,4 @@
-.search-box {
+.searchBox {
   width: 100%;
   background-color: white;
   margin: auto;
@@ -21,7 +21,7 @@
     font-size: 1.4vw;
   }
 
-  > .search-bar {
+  > .searchBar {
     height: 55%;
     background-color: #ebebeb;
     border: 1px solid #d7d7d7;
@@ -41,7 +41,7 @@
       padding: 0;
     }
 
-    .search-input {
+    .searchInput {
       width: 100%;
       height: 100%;
       font-size: 16px;
@@ -57,7 +57,6 @@
 
     button {
       padding: 0;
-
       height: 100%;
       width: 100%;
       background-size: 150%;
@@ -67,7 +66,7 @@
   }
 }
 
-.search-preview {
+.searchPreview {
   background-color: #ffffff;
   position: absolute;
   display: flex;
@@ -92,7 +91,7 @@
     max-width: 70%;
   }
 
-  &__card {
+  .card {
     padding-top: 10px;
     padding-bottom: 10px;
     margin: auto;
@@ -105,18 +104,18 @@
       cursor: pointer;
     }
 
-    &--title {
+    .title {
       font-size: 1em;
     }
 
-    &--brand {
+    .brand {
       display: inline-block;
       width: 70%;
       opacity: 0.5;
       font-size: 0.9em;
     }
 
-    &--price {
+    .price {
       display: inline-block;
       opacity: 0.5;
       width: 30%;
@@ -127,57 +126,57 @@
 }
 
 @media only screen and (max-width: 1200px) {
-  .search-preview {
+  .searchPreview {
     margin-top: 8px;
   }
 }
 
 @media only screen and (max-width: 1134px) {
-  .search-preview {
-    &__card {
+  .searchPreview {
+    .card {
       font-size: 15px;
     }
   }
 }
 
 @media only screen and (max-width: 1100px) {
-  .search-preview {
-    &__card {
+  .searchPreview {
+    .card {
       font-size: 14px;
     }
   }
 }
 
 @media only screen and (max-width: 1000px) {
-  .search-preview {
-    &__card {
+  .searchPreview {
+    .card {
       font-size: 13px;
     }
   }
 
-  .search-box span {
+  .searchBox span {
     font-size: 1.6vw;
   }
 }
 
 @media only screen and (max-width: 900px) {
-  .search-preview {
-    &__card {
+  .searchPreview {
+    .card {
       font-size: 12px;
     }
   }
 
-  .search-box span {
+  .searchBox span {
     font-size: 1.7vw;
   }
 }
 
 @media only screen and (max-width: 770px) {
-  .search-preview {
+  .searchPreview {
     margin-top: 5px;
   }
 
-  .search-box span {
+  .searchBox span {
     font-size: 1.9vw;
   }
 }
