--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -80,7 +80,7 @@
   border-bottom-left-radius: 0.3rem;
   border-top: none;
   z-index: 1;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -94,11 +94,11 @@
   .card {
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: auto;
     background-color: #ffffff;
     box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.25),
       -6px -6px 20px rgba(255, 255, 255, 0.25);
     font-size: 16px;
+    margin-right: 20px;
 
     &:hover {
       cursor: pointer;
@@ -121,6 +121,9 @@
       width: 30%;
       text-align: end;
       font-size: 0.9em;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
     }
   }
 }
