--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -1,8 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.container {
+.categoriesContainer {
   background-color: #f0f0f0;
   padding: 10%;
 }
@@ -27,6 +23,7 @@
     top: 50%;
   }
 }
+
 .card {
   width: 90%;
   height: 200px;
@@ -55,6 +52,7 @@
     z-index: 1;
   }
 }
+
 .cardTitle {
   position: absolute;
   bottom: 20px;
@@ -66,6 +64,8 @@
   font-weight: 400;
   z-index: 2;
 }
+
+// React-slick classes
 .slick-dots {
   background-color: #f0f0f0;
   li {
@@ -77,19 +77,23 @@
     }
   }
 }
+
 .slick-slide.slick-center {
   .card {
     transform: scale(1.15);
   }
 }
+
 .slick-track {
   margin-bottom: 20px;
 }
+
 @media screen and (max-width: 768) {
   .title {
     font-size: 30px;
   }
 }
+
 @media screen and (max-width: 500px) {
   .title {
     font-size: 25px;
