--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -1,3 +1,7 @@
+:root {
+  font-size: 16px;
+}
+
 .searchBox {
   width: 100%;
   background-color: white;
@@ -45,11 +49,13 @@
     .searchInput {
       width: 100%;
       height: 100%;
-      font-size: 16px;
       background-color: #ebebeb;
       transition: background-color 0.3s ease-in-out;
       border-top-right-radius: 0 !important;
       border-bottom-right-radius: 0 !important;
+
+      // To override default styling of Bootstrap FormInput.
+      font-size: 100%;
 
       &:hover {
         background-color: white;
@@ -98,15 +104,10 @@
     background-color: #ffffff;
     box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.25),
       -6px -6px 20px rgba(255, 255, 255, 0.25);
-    font-size: 16px;
     margin-right: 20px;
 
     &:hover {
       cursor: pointer;
-    }
-
-    .title {
-      font-size: 1em;
     }
 
     .brand {
@@ -129,6 +130,7 @@
   }
 }
 
+// TODO(emrerdem1): Use mixin with common breakpoints.
 $breakPointPreviewBreaks: 1200px;
 $breakPointCardBreaks: 1134px;
 $breakPointHamburgerSwallowSearch: 769px;
@@ -142,10 +144,8 @@ $breakPointOfExtraSmall: 444px;
 }
 
 @media (max-width: $breakPointCardBreaks) {
-  .searchPreview {
-    .card {
-      font-size: 90%;
-    }
+  .card {
+    font-size: 90%;
   }
 }
 
@@ -193,6 +193,7 @@ $breakPointOfExtraSmall: 444px;
     padding-right: 10px;
     margin-bottom: -1px;
 
+    // Turn back to original font-size in this resolution since SearchBox will expand again.
     button,
     input {
       font-size: 100%;
