--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,11 +1,11 @@
-.header{
+.header {
   height: 100vh;
   display: flex;
   align-items: center;
   color: #fff;
 }
 
-.video-wrap{
+.videoWrap {
   position: absolute;
   top: 0;
   left: 0;
@@ -14,23 +14,23 @@
   overflow: hidden;
 }
 
-.video-wrap video{
+.videoWrap video {
   min-width: 100%;
   min-height: 100%;
 }
 
-.header-overlay{
+.headerOverlay {
   height: 100vh;
   width: 100vw;
   position: absolute;
   top: 0;
   left: 0;
-  background: #2C3547;
+  background: #2c3547;
   z-index: 1;
   opacity: 0.85;
 }
 
-.header-content{
+.headerContent {
   z-index: 2;
   width: 100%;
   height: 100%;
@@ -39,64 +39,66 @@
   grid-template-rows: repeat(12, 1fr);
 }
 
-.line{
+.line {
   width: 70%;
   height: 2px;
   border: 1px solid white;
 }
 
-.line-wrapper{
+.lineWrapper {
   grid-column: 1/2;
   grid-row: 5/6;
-  @media (max-width: 968px){
+  @media (max-width: 968px) {
     display: none;
   }
 }
 
-.content{
+.content {
   grid-column: 2/9;
   grid-row: 5/9;
-  @media (max-width: 968px){
+  @media (max-width: 968px) {
     grid-column: 1/13;
     grid-row: 4/8;
   }
-  h1{
-    @media (max-width: 576px){
-    font-size: 2rem;
+
+  h1 {
+    @media (max-width: 576px) {
+      font-size: 2rem;
     }
-    @media (max-width: 400px){
+    @media (max-width: 400px) {
       font-size: 1.5rem;
     }
   }
+
   p {
-    @media (max-width: 400px){
+    @media (max-width: 400px) {
       font-size: 0.8rem;
     }
   }
 }
 
-
-.bottom-buttons {
+.bottomButtons {
   grid-column: 1/7;
   grid-row: 11/12;
-  @media (max-width: 968px){
+  @media (max-width: 968px) {
     grid-column: 3/11;
     grid-row: 11/12;
   }
-  @media (max-width: 576px){
+  @media (max-width: 576px) {
     grid-column: 1/13;
     grid-row: 11/12;
   }
-  @media (max-width: 400px){
+  @media (max-width: 400px) {
     grid-column: 1/13;
     grid-row: 9/12;
   }
-  ul{
+
+  ul {
     color: #fff;
     display: flex;
     list-style: none;
     padding: 0;
-    @media (max-width: 968px){
+    @media (max-width: 968px) {
       color: #fff;
       display: flex;
       list-style: none;
@@ -106,12 +108,12 @@
   }
 }
 
-.middle-buttons{
-  @media (max-width: 968px){
-  display: flex;
+.middleButtons {
+  @media (max-width: 968px) {
+    display: flex;
     justify-content: center;
   }
-  @media (max-width: 400px){ 
+  @media (max-width: 400px) {
     flex-wrap: wrap;
   }
 }
