creating slider section

--- a/src/components/layout/productCard/style.scss
+++ b/src/components/layout/productCard/style.scss
@@ -31,7 +31,7 @@
     }
   }
 
-  .title {
+  .productCardTitle {
     grid-row: 9/11;
     grid-column: 2/5;
     width: 100%;
@@ -40,14 +40,14 @@
     align-items: flex-end;
   }
 
-  .brand {
+  .productCardBrand {
     grid-row: 11/12;
     grid-column: 2/3;
     opacity: 0.5;
     align-self: center;
   }
 
-  .price {
+  .productCardPrice {
     grid-row: 11/12;
     grid-column: 11/12;
     opacity: 0.5;
@@ -60,4 +60,8 @@
 
 .slick-slide {
   display: inline-block;
+}
+
+.slick-slide > div {
+  width: 330%;
 }
