--- a/src/components/blog/style.overview.scss
+++ b/src/components/blog/style.overview.scss
@@ -1,3 +1,5 @@
+@import "../common/style.scss";
+
 //React-bootstrap built in classes
 
 .btn-primary {
@@ -30,6 +32,29 @@
     position: relative;
     z-index: 1;
 
+    @include media(desktop) {
+      width: 90%;
+      height: 90%;
+    }
+
+    @include media(tablet) {
+      grid-row: 1/13;
+      grid-column: 1/13;
+      position: relative;
+      z-index: 1;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.25);
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+      }
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -39,6 +64,10 @@
       width: 100%;
       height: 100%;
       z-index: -1;
+
+      @include media(tablet) {
+        display: none;
+      }
     }
 
     .headerImg {
@@ -52,12 +81,54 @@
     grid-row: 4/5;
     grid-column: 9/11;
     z-index: 4;
+
+    @include media(tablet) {
+      grid-row: 5/6;
+      align-self: start;
+      grid-column: 3/6;
+      color: white;
+    }
+
+    @include media(tablet-sm) {
+      grid-row: 5/6;
+      align-self: start;
+      grid-column: 3/10;
+      color: white;
+    }
+
+    @include media(phone) {
+      grid-row: 4/5;
+      align-self: start;
+      grid-column: 3/10;
+      color: white;
+    }
   }
 
   .blogDescription {
     grid-row: 6/11;
     grid-column: 8/12;
     z-index: 4;
+
+    @include media(tablet) {
+      grid-row: 6/10;
+      align-self: center;
+      grid-column: 3/9;
+      color: white;
+    }
+
+    @include media(tablet-sm) {
+      grid-row: 6/10;
+      align-self: center;
+      grid-column: 3/12;
+      color: white;
+    }
+
+    @include media(phone) {
+      grid-row: 6/10;
+      align-self: center;
+      grid-column: 3/12;
+      color: white;
+    }
   }
 
   .blogHeaderBtn {
@@ -70,5 +141,26 @@
     padding: 10px;
     z-index: 4;
     cursor: pointer;
+
+    @include media(tablet) {
+      grid-row: 10/11;
+      grid-column: 3/6;
+    }
+
+    @include media(tablet-sm) {
+      grid-row: 10/11;
+      grid-column: 3/7;
+    }
+
+    @include media(phone) {
+      grid-row: 10/11;
+      grid-column: 3/7;
+    }
+  }
+
+  .blogInfo {
+    @include media(tablet) {
+      display: none;
+    }
   }
 }
