--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -1,8 +1,4 @@
-@import "../../../common/style.scss";
-
-:root {
-  font-size: 16px;
-}
+@import "../../../../App.scss";
 
 .searchBox {
   width: 100%;
@@ -15,6 +11,7 @@
   align-items: center;
   flex-direction: column;
   padding: 0;
+  font-size: 16px;
 
   span {
     position: absolute;
@@ -69,7 +66,6 @@
       height: 100%;
       width: 100%;
       background-size: 150%;
-      background-color: #8bc6ec;
       background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
     }
   }
