--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,6 @@
+$buttonGetStarted: #485181;
+$buttonSignUp: #c3c9eb;
+
 .header {
   height: 100vh;
   display: flex;
@@ -9,7 +12,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100vh;
   overflow: hidden;
 }
@@ -39,7 +41,7 @@
   grid-template-rows: repeat(12, 1fr);
 }
 
-.line {
+.whiteLine {
   width: 70%;
   height: 2px;
   border: 1px solid white;
@@ -53,7 +55,7 @@
   }
 }
 
-.content {
+.headerTextContent {
   grid-column: 2/9;
   grid-row: 5/9;
   @media (max-width: 968px) {
@@ -109,6 +111,21 @@
 }
 
 .middleButtons {
+  .buttonGetStarted {
+    background-color: $buttonGetStarted;
+    border-color: $buttonGetStarted;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .buttonSignUp {
+    background-color: $buttonSignUp;
+    border-color: $buttonSignUp;
+    color: $buttonGetStarted;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   @media (max-width: 968px) {
     display: flex;
     justify-content: center;
