--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -12,7 +12,9 @@
   flex-direction: column;
   padding: 0;
   font-size: 16px;
-  z-index: 10;
+
+  // To show Search and SearchPreview over Navbar and Header.
+  z-index: 11;
 
   span {
     position: absolute;
@@ -97,7 +99,7 @@
     max-width: 70%;
   }
 
-  .card {
+  .previewCard {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #ffffff;
@@ -109,14 +111,14 @@
       cursor: pointer;
     }
 
-    .brand {
+    .previewBrand {
       display: inline-block;
       width: 70%;
       opacity: 0.5;
       font-size: 0.9em;
     }
 
-    .price {
+    .previewPrice {
       display: inline-block;
       opacity: 0.5;
       width: 30%;
@@ -137,16 +139,29 @@
 
 @include media(tablet-sm) {
   .searchBox {
-    width: 62vw;
-    left: 10px;
+    width: calc(100vw - 200px);
     position: absolute;
     transition: all 0.5s linear;
+
+    &::before {
+      content: "";
+      background-color: #6676a0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100%;
+    }
+
+    .searchBar {
+      max-width: 90%;
+    }
 
     .searchPreview {
       padding: 20px;
 
       // Do not show the third product at preview in this resolution.
-      .card:nth-last-of-type(1) {
+      .previewCard:nth-last-of-type(1) {
         display: none;
       }
     }
@@ -164,15 +179,5 @@
 
     // To hide 1px empty space between Search and Navbar.
     margin-bottom: -1px;
-
-    &::before {
-      content: "";
-      background-color: #6676a0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100%;
-    }
   }
 }
