--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -88,7 +88,6 @@
 
 @include media(tablet-sm) {
   .navbar {
-    position: absolute;
     width: 200px;
     height: 100vh;
     min-height: 100vh;
@@ -217,5 +216,8 @@
 
   @include media(tablet-sm) {
     transform: none;
+
+    // To keep Navbar above everything when it is in shape of Hamburger.
+    z-index: 102;
   }
 }
