--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -68,18 +68,23 @@ $buttonSignUp: #c3c9eb;
     grid-row: 4/8;
   }
 
+  @include media(phone) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   h1 {
     @include media(phone) {
       font-size: 2rem;
     }
 
-    @media (max-width: 400px) {
+    @include media(phone-sm) {
       font-size: 1.5rem;
     }
   }
 
   p {
-    @media (max-width: 400px) {
+    @include media(phone-sm) {
       font-size: 0.8rem;
     }
   }
@@ -99,7 +104,7 @@ $buttonSignUp: #c3c9eb;
     grid-row: 11/12;
   }
 
-  @media (max-width: 400px) {
+  @include media(phone-sm) {
     grid-column: 1/13;
     grid-row: 9/12;
   }
@@ -140,7 +145,7 @@ $buttonSignUp: #c3c9eb;
     display: flex;
     justify-content: center;
   }
-  @media (max-width: 400px) {
+  @include media(phone-sm) {
     flex-wrap: wrap;
   }
 }
