--- a/src/components/singleProductPage/singleProductPage.scss
+++ b/src/components/singleProductPage/singleProductPage.scss
@@ -1,114 +1,138 @@
 .productInfoContainer {
   width: 100%;
-  height: 50vh;
+  height: 70vh;
   display: flex;
-  box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.25),
-    -6px -6px 20px rgba(255, 255, 255, 0.25);
-  margin: 5%;
+  margin: auto;
 }
 
 .productImgs {
-  width: 100%;
-  height: 90%;
+  width: 50%;
+  height: 100%;
   background-color: #ecebe4;
   margin: 3%;
+  display: flex;
 
   .mainImg {
-    width: 150px;
+    width: 70%;
     background-color: transparent;
-    margin: 10% 20%;
+    margin: auto;
   }
-  .smallImgsContainer {
-    display: flex;
-    margin-left: 5%;
-  }
+
   .smallImgs {
-    width: 50px;
-    margin: 4%;
+    width: 350%;
     background-color: #c4c4c4;
+    margin-top: 200%;
+  }
+
+  .slick-initialized {
+    width: 100%;
+  }
+
+  .slick-thumb li {
+    margin: 12%;
+    margin-bottom: 23%;
+    margin-left: 0;
   }
 }
 
 .productInfo {
   width: 100%;
-  margin: 5%;
+  height: 100%;
+  margin: 3%;
   background-color: #fff;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
+
   .productBrand {
     grid-row: 1/2;
     grid-column: 1/2;
     color: gray;
-    font-size: 15px;
+    font-size: 25px;
     position: relative;
     left: 20%;
     &::before {
       content: "";
       display: block;
-      width: 18px;
+      width: 20px;
       height: 2px;
       background-color: gray;
       position: absolute;
-      top: 30%;
-      left: -50%;
+      top: 50%;
+      left: -30%;
     }
   }
+
   .productPrice {
     grid-row: 1/2;
     grid-column: 11/12;
-    font-weight: 400;
+    font-weight: 600;
+    font-size: 25px;
   }
+
   .productTitle {
     grid-row: 2;
     grid-column: 1/2;
+    font-size: 30px;
   }
+
   .productDescription {
     grid-row: 3/4;
     grid-column: 1/10;
-    font-size: 10px;
+    font-size: 20px;
     color: #b2b2b2;
     font-weight: 300;
   }
+
   .productQuantity {
     grid-row: 4/6;
     grid-column: 1/4;
     border: none;
     width: 60%;
+    height: 60%;
     background-color: #ecebe4;
   }
+
   .quantity {
-    grid-row: 4/6;
+    grid-row: 4;
     grid-column: 2/4;
+    font-size: 120%;
   }
+
   .productSizes {
     background-color: #ecebe4;
     border: none;
     grid-row: 4/6;
     grid-column: 11/12;
-    width: 100%;
+    width: 60%;
+    height: 60%;
+    font-size: 100%;
   }
+
   select option:disabled {
     display: none;
   }
+
   .AddToCartBtn {
     background-color: #cecceb;
     border: none;
     grid-row: 7/10;
     grid-column: 1/6;
-    width: 100px;
-    height: 40px;
+    width: 90%;
+    height: 50%;
     margin-left: 0;
   }
+
   .BuyNowBtn {
     background-color: #e4d394;
     border: none;
     grid-row: 7/10;
     grid-column: 6/12;
-    width: 100px;
-    height: 40px;
+    width: 90%;
+    height: 50%;
     margin-left: 12%;
   }
+
   .favoriteBtn {
     background-color: transparent;
     grid-row: 11/14;
@@ -122,6 +146,7 @@
     border-bottom: solid 2px #c4c4c490;
     border-right: solid 2px #c4c4c490;
   }
+
   .commentBtn {
     background-color: transparent;
     grid-row: 11/14;
