--- a/src/components/home/categories.scss
+++ b/src/components/home/categories.scss
@@ -1,3 +1,5 @@
+@import "../common/varaibles";
+
 .categoriesContainer {
   background-color: #f0f0f0;
   padding: 10%;
@@ -88,13 +90,13 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 768) {
+@include media(tablet-sm) {
   .categoryTitle {
     font-size: 30px;
   }
 }
 
-@media screen and (max-width: 500px) {
+@include media(phone) {
   .categoryTitle {
     font-size: 25px;
     &::before {
