--- a/src/components/singleProductPage/singleProductPage.scss
+++ b/src/components/singleProductPage/singleProductPage.scss
@@ -126,7 +126,7 @@
     margin-left: 0;
   }
 
-  .BuyNowBtn {
+  .buyNowBtn {
     background-color: #e4d394;
     border: none;
     grid-row: 7/10;
@@ -269,7 +269,7 @@
       font-size: 70%;
     }
 
-    .BuyNowBtn {
+    .buyNowBtn {
       width: 100%;
       height: 40%;
       font-size: 70%;
@@ -296,7 +296,7 @@
       height: 50%;
     }
 
-    .BuyNowBtn {
+    .buyNowBtn {
       width: 100%;
       height: 50%;
     }
@@ -331,7 +331,7 @@
       height: 65%;
     }
 
-    .BuyNowBtn {
+    .buyNowBtn {
       width: 100%;
       height: 65%;
     }
