--- a/src/components/layout/footer/style.scss
+++ b/src/components/layout/footer/style.scss
@@ -1,10 +1,5 @@
 @import "../../common/variables";
 
-.navBar {
-  list-style: none;
-  margin-top: 15px;
-}
-
 .footerSection {
   padding: 70px 150px;
   position: relative;
@@ -21,10 +16,15 @@
   }
 
   .navBar {
-    flex-direction: row;
     display: flex;
+    list-style: none;
+    margin-top: 15px;
 
-    li {
+    a {
+      color: white;
+    }
+
+    .navBarItem {
       display: inline-block;
       margin: auto;
     }
