--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,6 @@ $buttonSignUp: #c3c9eb;
   display: flex;
   align-items: center;
   color: #fff;
-
 }
 
 .videoWrap {
@@ -54,75 +53,22 @@ $buttonSignUp: #c3c9eb;
 .lineWrapper {
   grid-column: 1/2;
   grid-row: 5/6;
-
-  @include media(tablet) {
-    display: none;
-  }
 }
 
 .headerTextContent {
   grid-column: 2/9;
   grid-row: 5/9;
-
-  @include media(tablet) {
-    grid-column: 1/13;
-    grid-row: 4/8;
-  }
-
-  @include media(phone) {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-
-  h1 {
-    @include media(phone) {
-      font-size: 2rem;
-    }
-
-    @include media(phone-sm) {
-      font-size: 1.5rem;
-    }
-  }
-
-  p {
-    @include media(phone-sm) {
-      font-size: 0.8rem;
-    }
-  }
 }
 
 .bottomButtons {
   grid-column: 1/7;
   grid-row: 11/12;
 
-  @include media(tablet) {
-    grid-column: 3/11;
-    grid-row: 11/12;
-  }
-
-  @include media(phone) {
-    grid-column: 1/13;
-    grid-row: 11/12;
-  }
-
-  @include media(phone-sm) {
-    grid-column: 1/13;
-    grid-row: 9/12;
-  }
-
   ul {
     color: #fff;
     display: flex;
     list-style: none;
     padding: 0;
-
-    @include media(tablet) {
-      color: #fff;
-      display: flex;
-      list-style: none;
-      padding: 0;
-      justify-content: center;
-    }
   }
 }
 
@@ -141,12 +87,88 @@ $buttonSignUp: #c3c9eb;
     padding-left: 3rem;
     padding-right: 3rem;
   }
+}
 
-  @include media(tablet) {
+@include media(tablet) {
+  .lineWrapper {
+    display: none;
+  }
+
+  .headerTextContent {
+    grid-column: 1/13;
+    grid-row: 4/8;
+
+    h1 {
+      margin-bottom: 2rem;
+    }
+
+    p {
+      font-size: 1.25rem;
+    }
+  }
+
+  .middleButtons {
+    margin-top: 8%;
     display: flex;
     justify-content: center;
   }
-  @include media(phone-sm) {
+
+  .bottomButtons {
+    grid-column: 3/11;
+    grid-row: 12;
+
+    ul {
+      justify-content: center;
+    }
+  }
+}
+
+@include media(phone) {
+  .headerTextContent {
+    padding-left: 15px;
+    padding-right: 15px;
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  .middleButtons {
+    grid-column: 1/13;
+    margin-top: 3rem;
+
+    .buttonGetStarted {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    .buttonSignUp {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+  }
+
+  .bottomButtons {
+    grid-column: 1/13;
+    grid-row: 12;
+  }
+}
+@include media(phone-sm) {
+  .headerTextContent {
     
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 0.8rem;
+      margin-bottom: 2rem;
+    }
+  }
+
+  .bottomButtons {
+    grid-column: 1/13;
+    grid-row: 11/12;
   }
 }
