--- a/src/components/layout/footer/style.scss
+++ b/src/components/layout/footer/style.scss
@@ -19,6 +19,7 @@
     display: flex;
     list-style: none;
     margin-top: 15px;
+    justify-content: space-around;
 
     a {
       color: white;
