--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -1,5 +1,9 @@
 @import "../../common/variables";
 
+$navbarIndex: 102;
+$hamburgerIconIndex: 103;
+$closeSignUpIconIndex: 105;
+
 .navbar {
   display: flex;
   height: 100px;
@@ -12,7 +16,7 @@
   overflow-x: hidden;
 
   // To show Navbar that has transparent background on top of Header component.
-  z-index: 100;
+  z-index: $navbarIndex;
 
   .collapseMenuItems {
     width: 80%;
@@ -125,7 +129,7 @@
       position: absolute;
       top: 10px;
       right: 50px;
-      z-index: 2;
+      z-index: $hamburgerIconIndex;
 
       .hamburgerIcon {
         display: block;
@@ -136,7 +140,7 @@
         top: 50%;
         transform: translate(-50%, -50%);
         background-color: white;
-        z-index: 2;
+        z-index: $hamburgerIconIndex;
 
         &::before,
         &::after {
@@ -144,7 +148,7 @@
           height: 3px;
           position: absolute;
           background-color: white;
-          z-index: 2;
+          z-index: $hamburgerIconIndex;
         }
 
         &::before {
@@ -216,9 +220,6 @@
 
   @include media(tablet-sm) {
     transform: none;
-
-    // To keep Navbar above everything when it is in shape of Hamburger.
-    z-index: 102;
   }
 }
 
@@ -227,7 +228,7 @@
   transform: translateY(70px);
   top: 40px;
   right: 50px;
-  z-index: 101;
+  z-index: $closeSignUpIconIndex;
   font-size: 25px;
   width: 30px;
   text-align: center;
