--- a/src/components/blog/style.overview.scss
+++ b/src/components/blog/style.overview.scss
@@ -14,10 +14,6 @@
   padding: 5px 30px;
 }
 
-.overviewContainer {
-  height: 100vh;
-}
-
 .blogHeader {
   background-color: #ecebe4;
   width: 100%;
@@ -42,6 +38,8 @@
       grid-column: 1/13;
       position: relative;
       z-index: 1;
+      width: 100%;
+      height: 100%;
 
       &::before {
         content: "";
@@ -77,7 +75,7 @@
     }
   }
 
-  .blogTitle {
+  h1 {
     grid-row: 4/5;
     grid-column: 9/11;
     z-index: 4;
@@ -157,8 +155,7 @@
       grid-column: 3/7;
     }
   }
-
-  .blogInfo {
+  h6 {
     @include media(tablet) {
       display: none;
     }
