--- a/src/components/shoppingCart/paymentbar/PaymentSum.scss
+++ b/src/components/shoppingCart/paymentbar/PaymentSum.scss
@@ -1,5 +1,7 @@
 @import "../../common/variables";
 
+$avoidOverlappingNavbar: 90px;
+
 // To only affect this styling scope for resetting.
 .paymentInfoBar * {
   margin: 0;
@@ -14,7 +16,7 @@
   right: 0;
   background-color: rgba(128, 141, 158, 0.527);
   font-size: 18px;
-  padding-top: 70px;
+  padding-top: $avoidOverlappingNavbar;
 
   .orderSummary {
     flex-direction: column;
