--- a/src/components/layout/nav/signup/SignUp.scss
+++ b/src/components/layout/nav/signup/SignUp.scss
@@ -27,7 +27,7 @@ $signUpFormIndex: 104;
   // To show SignUpBox on the Header overlay.
   z-index: $signUpFormIndex;
 
-  .socialMediaSeperator {
+  .socialMediaSeparator {
     width: 80%;
     text-align: center;
     border-bottom: 1px solid $signUpInputBorder;
