Edit: do little edits

--- a/src/components/profile/general/GeneralSection.scss
+++ b/src/components/profile/general/GeneralSection.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 150px;
-  background: url("./profile-background.svg") no-repeat;
+  background: url("./profile-avatar.svg") no-repeat;
   display: flex;
   justify-content: center;
   background-size: cover;
