Merge: merge the latest dev

--- a/src/components/shoppingCart/paymentbar/PaymentSum.scss
+++ b/src/components/shoppingCart/paymentbar/PaymentSum.scss
@@ -43,7 +43,7 @@ $avoidOverlappingNavbar: 90px;
           bottom: -22px;
           left: 50%;
           transform: translateX(-50%);
-          color: green;
+          color: rgb(12, 134, 12);
         }
       }
     }
