Fix: fix a line of styling

--- a/src/components/layout/footer/Footer.scss
+++ b/src/components/layout/footer/Footer.scss
@@ -54,9 +54,10 @@ $facebookHoverColor: #3b5998 !important;
     }
 
     .footerLinksBlogs,
-    .footerLinksPages a {
-      width: 100%;
-      display: inline-block;
+    .footerLinksPages {
+      a {
+        display: block;
+      }
     }
   }
 
