--- a/src/components/shoppingCart/relatedsection/RelatedProducts.scss
+++ b/src/components/shoppingCart/relatedsection/RelatedProducts.scss
@@ -1,6 +1,13 @@
-.sliderSectionWrapper {
-  max-width: calc(100% - 350px) !important;
+$excludePaymentBar: calc(100% - 350px) !important;
+
+.relatedSectionContainer {
+  max-width: $excludePaymentBar;
   position: relative;
-  padding: 40px 0 40px 20px !important;
+  padding: 200px 0 40px 20px !important;
   margin: 0 !important;
+
+  .relatedSectionInfo {
+    margin: 0;
+    padding: 15px 20px;
+  }
 }
