--- a/src/components/shoppingCart/cartmain/style.scss
+++ b/src/components/shoppingCart/cartmain/style.scss
@@ -1,19 +1,34 @@
-.handleClick {
-  background-color: #d4d2d2;
-  color: #6a6464;
-  justify-content: center;
-  align-self: center;
-  flex: 1;
-  align-items: "center";
+.paymentInfoWrapper {
+  width: calc(100% - 400px);
+  padding-top: 100px;
+  padding-left: 60px;
 }
 
-body {
-  background-color: red;
-  margin: 0;
+.handleClick {
+  text-align: center;
+  background-color: #d4d2d2;
+  color: #6a6464;
+  margin: auto;
+  padding: auto;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+
+    .quantityCount {
+      margin: 0 10px;
+    }
 }
 
 .backToProducts {
-  align-items: center;
+  top: 50px;
+    right: 5px;
+    left: 5px;
+    position: fixed;
+  padding: initial;
+  margin: auto;
+  align-items: right;
   color: #343434;
   background-color: #828282;
+text-align: right;
 }
