--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,12 +2,17 @@
 
 $buttonGetStarted: #485181;
 $buttonSignUp: #c3c9eb;
+$headerHeight: 110vh;
 
 .header {
-  height: 100vh;
+  height: $headerHeight;
   display: flex;
   align-items: center;
   color: #fff;
+
+  .headerDescription {
+    padding-top: 10px;
+  }
 }
 
 .videoWrap {
@@ -15,7 +20,7 @@ $buttonSignUp: #c3c9eb;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: $headerHeight;
   overflow: hidden;
 }
 
@@ -25,7 +30,7 @@ $buttonSignUp: #c3c9eb;
 }
 
 .headerOverlay {
-  height: 100vh;
+  height: $headerHeight;
   width: 100vw;
   position: absolute;
   top: 0;
@@ -38,7 +43,7 @@ $buttonSignUp: #c3c9eb;
 .headerContent {
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: $headerHeight;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -61,8 +66,8 @@ $buttonSignUp: #c3c9eb;
 }
 
 .bottomButtons {
-  grid-column: 1/7;
-  grid-row: 11/12;
+  grid-column: 1/13;
+  grid-row: 11/13;
 
   ul {
     color: #fff;
@@ -73,6 +78,8 @@ $buttonSignUp: #c3c9eb;
 }
 
 .middleButtons {
+  padding-top: 10px;
+
   .buttonGetStarted {
     background-color: $buttonGetStarted;
     border-color: $buttonGetStarted;
@@ -90,32 +97,38 @@ $buttonSignUp: #c3c9eb;
 }
 
 @include media(tablet) {
+  .headerContent {
+    padding-left: 30px;
+  }
+
   .lineWrapper {
     display: none;
   }
 
   .headerTextContent {
     grid-column: 1/13;
-    grid-row: 4/8;
+    grid-row: 4/9;
 
-    h1 {
-      margin-bottom: 2rem;
+    .headerTitle {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
     }
 
-    p {
-      font-size: 1.25rem;
+    .headerDescription {
+      margin-bottom: 1.3rem;
+      font-size: 1.1rem;
     }
   }
 
   .middleButtons {
-    margin-top: 8%;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
   }
 
   .bottomButtons {
-    grid-column: 3/11;
-    grid-row: 12;
+    grid-row: 10/13;
+    padding-top: 20px;
 
     ul {
       justify-content: center;
@@ -123,24 +136,34 @@ $buttonSignUp: #c3c9eb;
   }
 }
 
+@include media(tablet-sm) {
+  .bottomButtons {
+    grid-row: 11/13;
+  }
+}
+
 @include media(phone) {
   .headerTextContent {
+    grid-row: 3/8;
     padding-left: 15px;
     padding-right: 15px;
 
-    h1 {
-      font-size: 2rem;
+    .headerTitle {
+      font-size: 1.9rem;
       margin-bottom: 1.5rem;
+    }
+
+    .headerDescription {
+      font-size: 3.5vw;
     }
   }
 
   .middleButtons {
     grid-column: 1/13;
-    margin-top: 3rem;
 
     .buttonGetStarted {
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
 
     .buttonSignUp {
@@ -148,21 +171,16 @@ $buttonSignUp: #c3c9eb;
       padding-right: 2rem;
     }
   }
-
-  .bottomButtons {
-    grid-column: 1/13;
-    grid-row: 12;
-  }
 }
 
 @include media(phone-sm) {
   .headerTextContent {
-    h1 {
-      font-size: 1.5rem;
+    .headerTitle {
+      font-size: 1.3rem;
     }
 
-    p {
-      font-size: 0.8rem;
+    .headerDescription {
+      font-size: 0.9rem;
       margin-bottom: 2rem;
     }
   }
@@ -170,5 +188,15 @@ $buttonSignUp: #c3c9eb;
   .bottomButtons {
     grid-column: 1/13;
     grid-row: 11/12;
+  }
+
+  .buttonGetStarted {
+    padding-left: 1.2rem !important;
+    padding-right: 1.2rem !important;
+  }
+
+  .buttonSignUp {
+    padding-left: 1.2rem !important;
+    padding-right: 1.2rem !important;
   }
 }
